# cpp-opencv-tesseract

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  main.py
